MicroTriggerFramework/main/default/objects/MicroTriggerAction__mdt/MicroTriggerAction__mdt.object-meta.xml
<CustomObject>
    <label>MicroTrigger Action</label>
    <pluralLabel>MicroTrigger Actions</pluralLabel>
</CustomObject>