MicroTriggerFramework/main/default/objects/MicroTriggerAction__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Action</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>