MicroTriggerFramework/main/default/objects/MicroTriggerAction__mdt/fields/Is_Async__c.field-meta.xml
<CustomField>
    <fullName>Is_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the microtrigger action should run in an asynchronous context</description>
    <label>Is Async</label>
    <type>Checkbox</type>
</CustomField>