MicroTriggerFramework/main/default/objects/MicroTriggerAction__mdt/fields/MicroTrigger__c.field-meta.xml
<CustomField>
    <fullName>MicroTrigger__c</fullName>
    <label>MicroTrigger</label>
    <referenceTo>MicroTrigger__mdt</referenceTo>
    <relationshipLabel>MicroTrigger Actions</relationshipLabel>
    <relationshipName>MicroTriggerActions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>